fix smth on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -459,6 +459,11 @@ a .icon-header:hover{
 }
 
 
+.carousel-control-next-icon, .carousel-control-prev-icon {
+  width: 1.5rem!important;
+  height: 1.5rem!important;
+}
+
 
 
 /* Main page slider */
